FIX GRID OVERFLOWING

--- a/style.css
+++ b/style.css
@@ -25,4 +25,6 @@ body{
 
 .childDiv{
     background-color: blue;
+    border: 1px solid black;
+    box-sizing: border-box;
 }
